[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
 	   <h4> this is test app</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
+        alert("Hai");
         </script>
     </body>
 </html>
